--- a/package.json
+++ b/package.json
@@ -21,15 +21,21 @@
     "@angular/platform-browser": "^18.0.0",
     "@angular/platform-browser-dynamic": "^18.0.0",
     "@angular/router": "^18.0.0",
+    "@capacitor-community/sqlite": "^6.0.1",
     "@capacitor/app": "6.0.0",
     "@capacitor/core": "6.1.0",
     "@capacitor/haptics": "6.0.0",
+    "@capacitor/ios": "6.1.0",
     "@capacitor/keyboard": "6.0.1",
     "@capacitor/status-bar": "6.0.0",
     "@ionic/angular": "^8.0.0",
+    "es6-shim": "^0.35.8",
     "ionicons": "^7.0.0",
+    "reflect-metadata": "^0.2.2",
     "rxjs": "~7.8.0",
+    "sqlite3": "^5.1.7",
     "tslib": "^2.3.0",
+    "typeorm": "^0.3.20",
     "zone.js": "~0.14.2"
   },
   "devDependencies": {
@@ -44,7 +50,10 @@
     "@angular/language-service": "^18.0.0",
     "@capacitor/cli": "6.1.0",
     "@ionic/angular-toolkit": "^11.0.1",
+    "@types/es6-shim": "^0.31.45",
+    "@types/events": "^3.0.3",
     "@types/jasmine": "~5.1.0",
+    "@types/node": "^20.14.10",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "eslint": "^8.57.0",
